SERVER-3988 Implement support for $pull with a regex